--- a/all_models/.gitignore
+++ b/all_models/.gitignore
@@ -146,8 +146,8 @@ dmypy.json
 /run_tv.py
 
 /scripts/long_term_forecast/ETT_tv_script/
-/dataset/
-/data/
+# /dataset/
+# /data/
 data_factory_all.py
 data_loader_all.py
 /scripts/short_term_forecast/tv_script/
